# Rubik-s-solver

./: Algorithm.cpp  CMakeLists.txt  README.md  TURNS.cpp  cubix.h  main.cpp
tryhard/: cubix.cpp  cubix.h
